2006-03-07  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Changed CustomObserver window to a dialog.
	Added new customObservers dialog.
	Added new editObserver dialog.
	Made old customObservers window hidden by default.
	Removed extranious widgets and did some general clean up and
	spacing.

2006-03-07  Adam Jocksch  <ajocksch@redhat.com>

	* DebugHistory.java (DebugHistory): Now takes initial threshold,
	also changed spacing of events to 25px apiece.
	(exposeEvent): Now checks event threshold before drawing.
	(setThreshold): Added.
	(ObserverEvent): Now takes an importance.
	(ObserverEvent::draw): Now scales it's height to it's importance.
	* DummyDebugResults.java (DummyDebugResults): Now listens to the
	slider and adjusts the threshold accordingly.
	* glade/debugresultswindow.glade: Named threshold scroller.

2006-03-06  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source_prefs.glade: Increased width of preferences window
	to 500.

	* glade/frysk_source_prefs.glade: Gave meaningful names to scrolled
	pane and viewport for preferences.

	* DummySourceWindow.java (initializePreferences): Copied
	from Gui.java.
	(buildHandler): Ditto.
	(setupErrorLogging): Ditto.
	(importPreferences): Ditto.
	(DummySourceWin): Now loads preferences and initializes model.

	* DebugHistory.java: Added comments.

2006-03-03  Adam Jocksch  <ajocksch@redhat.com>

	* Gui.java (initializePreferences): Added.
	* glade/frysk_source_prefs.java: Removed HBox from right side
	of widget, replaced with VBox in a scrollable area.

2006-03-01  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Fixed text != NULL bug.
	More hig compatablility changes.

2006-02-28  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Fixed vPane position... was causing
	exception when frysk is frist run.

2006-02-27  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added wizzard for creating a new debug
	session.